<resources>
    <string name="app_name">Desafios Comuns Android</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="apply_filter">Aplicar Filtro</string>
    <string name="last_15_min">Útimos 15 Minutos</string>
    <string name="last_hour">À Hora Atrás</string>
    <string name="last_4_hours">Últimas 4 Horas</string>
    <string name="last_day">À Dia Atrás</string>

    <string name="deutsch">Alemão</string>
    <string name="franzoesisch">Francês</string>

    <string name="app_login_title">Entrar no Sistema</string>
    <string name="username_hint">Nome do usuário</string>
    <string name="password_hint">Senha do usuário</string>
    <string name="loggin">Realizar Login</string>
    <string name="imprint">Política de Dados</string>
    <string name="show_filter_menu">Exibir Filtros</string>
    <string name="show_text_filter_menu">Exibir Menu Filtragem</string>

    <string name="general_error_header">Erro Desconhecido!</string>
    <string name="general_error_description">Se o erro persitir, entre em contato com o nosso suporte pelo número 0800 80 80!</string>

    <string-array name="filter_type">
        <item>O</item>
        <item>B</item>
    </string-array>

    <string-array name="filter_status">
        <item>inativo</item>
        <item>ativo</item>
        <item>desativado</item>
    </string-array>

    <string-array name="filter_priority">
        <item>baixa</item>
        <item>media</item>
        <item>alta</item>
    </string-array>

    <string-array name="filter_time">
        <item>À 15 min.</item>
        <item>À 1 Hora</item>
        <item>À 4 Hora</item>
        <item>À 1 Dia</item>
    </string-array>

    <!-- tambem poderia ser traduzido: Veja Video tradução -->
    <plurals name="quantidade" translatable="false">
        <item quantity="one">%d carro encontrado.</item>
        <item quantity="other">%d carros encontrados.</item>
    </plurals>

    <string name="camera_aproxime" translatable="false">Aproxime a camera</string>
    <string name="camera_afaste" translatable="false">Afaste a camera</string>
    <string name="camera_aguarde" translatable="false">Aguarde um pouco</string>
    <string name="camera_scaneando" translatable="false">Escaneando</string>
    <string name="camera_reposicione" translatable="false">Reposicione a camera</string>
    <string name="camera_nao_se_mexa" translatable="false">Tente não se mover</string>

    <string name="fragment_onboarding_text_btn">\"Oxê, fácil demais hômi. Simbora!\"</string>
    <string name="into_slide_title1_onboarding">Visualize Paradas</string>
    <string name="into_slide_desc1_onboarding">Nada de ficar conversando com o motorista! Exiba todo o itinerário das linhas e suas respectivas paradas com apenas um click!</string>
    <string name="into_slide_title2_onboarding">Trace Rotas</string>
    <string name="into_slide_title3_onboarding">Use Filtros</string>
    <string name="into_slide_title4_onboarding">Linhas &amp; Tarifas</string>
    <string name="into_slide_title5_onboarding">Itens Incríveis</string>
    <string name="into_slide_title6_onboarding">Disponível Em Breve</string>
    <string name="into_slide_desc2_onboarding">Descubra rotas diretas ou com escalas. Visualize as tarifas ou exiba rotas com melhor custo benefício.</string>
    <string name="into_slide_desc3_onboarding">Melhore sua pesquisa usando filtros, descubra as rotas mais baratas, exiba os ônibus com ar condicionado ou os \"Curujões\" que passam de madrugada.</string>
    <string name="into_slide_desc4_onboarding">Descubra quais ônibus passam por perto de você, na sua rua/avenida, quais tarifas eles cobram e quais números os identificam.</string>
    <string name="into_slide_desc5_onboarding">Divirta-se com nosso \"Sutaque\", adquira itens para melhorar seus resultados ou ganhar dinheiro. Encontre os \"eastereggs\" escondidos.</string>
    <string name="into_slide_desc6_onboarding">A tão esperada e solicitada função de visualizar paradas ou buscar ônibus pelo mapa, estará disponível em breve! Fique atento!</string>

    <string name="text_destino">Destino</string>
    <string name="text_partida">Partida</string>
    <string name="text_escala">Escala</string>

    <string name="content_description_img_timeline">Ícone da timeline</string>
    <string name="content_description_img_onibus">Ícone de ônibus</string>
    <string name="content_description_img_escala">Ícone de escala</string>
    <string name="content_description_img_destino">Ícone de destino</string>
    <string name="content_description_img_divider">Divisor de conteúdo</string>
    <string name="content_description_img_start">Ícone de start</string>
    <string name="content_description_img_best_price">Ícone que indica rota com melhor tarifa</string>

    <string name="content_description_rating">"Ícone com cinco estrelas "</string>
    <string name="feedbak_rating_title">\"Ainda num votasse?\"</string>
    <string name="feedbak_rating_title0">\"Já avaliasse?\"</string>
    <string name="feedbak_rating_title1">\"Já fosse votar?\"</string>
    <string name="feedbak_rating_title2">\"Cadê teu voto?\"</string>
    <string name="feedbak_rating_title3">\"Já motivasse a gente?\"</string>
    <string name="feedback_rating_subtitle">\"Façiço não. Vote logo!\"</string>
    <string name="feedback_rating_btn_send">\"Foi mal vei! Vô votar agora mermo!\"</string>
    <string name="feedback_rating_btn_later">Mais tarde</string>

    <string name="card_route_title">Conexões de ônibus</string>
    <string name="card_route_subtitle">Trace rotas e visualize conexões…</string>

    <string name="card_bus_map_title">Ônibus no Mapa</string>
    <string name="card_bus_map_subtitle">Clique linhas e destino no mapa…</string>

    <string name="card_bus_stop_title">Paradas de ônibus</string>
    <string name="card_bus_stop_subtitle">Veja se esta perto de descer…</string>

    <string name="card_bus_line_title">Linhas de ônibus</string>
    <string name="card_bus_line_subtitle">Quais linhas passam por aqui?</string>

    <string name="view_item_title">Título View Item</string>
    <string name="view_item_subtitle">Subtítulo com descrição</string>

</resources>