<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/xIdBusStartStaticContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/xIdBusBestPriceContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:backgroundTint="@color/badge_destino"
                android:background="@drawable/ic_thumb_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/content_description_img_best_price"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:padding="5dp"
                android:layout_marginTop="0.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/content_description_img_best_price"
                app:srcCompat="@drawable/ic_money"
                tools:ignore="RtlSymmetry"
                app:tint="@color/text_color" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/xIdBusStartIconContainer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/xIdBusStartContentContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/xIdBusStartIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:contentDescription="@string/content_description_img_start"
                app:srcCompat="@drawable/ic_bus_walk"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/xIdBusStartIconTimeline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="0dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/content_description_img_timeline"
                android:background="@drawable/bus_start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/xIdBusStartContentContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/xIdBusStartIconContainer"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/xIdBusStartTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingLeft="6dp"
                android:paddingTop="6dp"
                android:paddingRight="6dp"
                android:drawablePadding="8dp"
                android:text="@string/text_partida"
                android:textColor="@color/bus_title"
                android:textSize="16sp"
                android:textStyle="bold"
                 />

            <TextView
                android:id="@+id/xIdBusStartSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:visibility="visible"
                tools:text="Rua Tupan"
                android:textColor="@color/bus_subtitle"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/xIdBusStartDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:visibility="gone"
                tools:text="Rua Tupan"
                android:textColor="@color/bus_subtitle"
                android:textSize="12sp" />

            <View
                android:id="@+id/xIdBusStartContentDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/content_description_img_divider"
                android:background="@color/bus_divider"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>







</LinearLayout>