<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="0dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/xIdBusEndStaticContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/xIdBusIconContainer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/xIdBusEndContentContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/xIdBusEndIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingStart="16dp"
                android:paddingBottom="6dp"
                android:contentDescription="@string/content_description_img_destino"
                app:srcCompat="@drawable/ic_endpoint"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/xIdBusEndIconTimeline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="16dp"
                android:scaleType="fitXY"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/content_description_img_timeline"
                android:background="@drawable/bus_end" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/xIdBusEndContentContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/xIdBusIconContainer"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/xIdBusEndTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingLeft="6dp"
                android:paddingTop="6dp"
                android:paddingRight="6dp"
                android:text="@string/text_destino"
                android:textColor="@color/bus_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/xIdBusEndSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                tools:text="Cais de Santa Rita"
                android:textColor="@color/bus_subtitle"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>







</LinearLayout>