<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="0dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/xIdBusScalaInfoContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/xIdBusScalaInfoIconContainer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/xIdBusScalaInfoContentContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/xIdBusScalaInfoIcon"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_img_escala"
                app:srcCompat="@drawable/ic_bus_transfer" />

            <ImageView
                android:id="@+id/xIdBusScalaInfoIconTimeline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="-1dp"
                android:layout_marginTop="0dp"
                android:paddingTop="0dp"
                android:paddingBottom="-1dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/content_description_img_timeline"
                android:background="@drawable/bus_large" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/xIdBusScalaInfoContentContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/xIdBusScalaInfoIconContainer"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/xIdBusScalaInfoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingLeft="6dp"
                android:paddingTop="16dp"
                android:paddingRight="6dp"
                android:drawableStart="@drawable/ic_bus_change"
                android:drawablePadding="8dp"
                android:text="@string/text_escala"
                android:textStyle="bold"
                android:textColor="@color/bus_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/xIdBusScalaInfoSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingBottom="16dp"
                tools:text="Rua Pedro Alvares Cabral"
                android:textColor="@color/bus_subtitle"
                android:textSize="12sp" />

            <View
                android:id="@+id/xIdExpandableContentDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:padding="0dp"
                android:background="@color/bus_divider" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>